# TTlab

./: .readthedocs.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
api/: index.html
docs/: api.md  index.md  installation.md  requirements.txt
docs/source/: conf.py  index.rst  modules.rst
installation/: index.html
search/: search_index.json
source/: ttlab.rst
tests/: function_test.py  test_functions.ipynb  test_silvacoVD.py
tests/test_data/silvacoVD/: sample.str
ttlab/: DF2animation.py  ECC133.py  ERC224.py  __init__.py  characterization.py  semi_physics.py  silvacoVD.py
usage/: index.html
