[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "ttlab"  # Your package name (must match import name)
version = "0.1.0"  # Initial version (semantic versioning: major.minor.patch)
description = "TTLAB Semiconductor analysis and simulation package"  # Short package description
authors = [{ name = "Eugene Hsu", email = "shsu30@asu.edu" }]  # Replace with your info
readme = "README.md"  # README file for package description
requires-python = ">=3.7"  # Minimum Python version required

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "platformdirs",  # For platform detection
    "pathlib",       # Standard library for Python 3.4+, but needed for older versions
]

[tool.setuptools.packages.find]
include = ["ttlab*"]  # Include all packages starting with ecrypto

[tool.pytest.ini_options]
testpaths = ["tests"]